# rtsp-curl

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish.yml
madyel/: __init__.py  rtsp_curl.py
tests/: test_rtsp_curl.py
