[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rtsp-curl-mad"
version = "0.9.0"
description = "Python RTSP client built on libcurl (pycurl)"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "MaDyEl", email = "madyel83@gmail.com" }]
keywords = ["rtsp", "streaming", "curl", "pycurl", "camera"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.9"
dependencies = [
    "pycurl>=7.45.0",
    "scanf>=1.5.2",
]

[project.urls]
Homepage = "https://github.com/madyel/rtsp-curl"
Repository = "https://github.com/madyel/rtsp-curl"
"Bug Tracker" = "https://github.com/madyel/rtsp-curl/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["madyel*"]

[tool.ruff]
line-length = 99
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
